# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .stow-local-ignore  README.md  dot-bash-aliases  dot-bash_aliases  dot-chktexrc  dot-p10k.zsh  dot-pdbrc  dot-stow-global-ignore  dot-tmux.conf  dot-vimrc  dot-zprofile  dot-zshenv  dot-zshenv-per-machine  dot-zshrc  dot-zshrc-per-machine
dot-claude/: .gitignore  CLAUDE.md  settings.json  settings.json.example  statusline-command.sh
dot-claude/hooks/: lint-test-quality.py
dot-config/iterm2/: AppSupport
dot-fonts/: .uuid
dot-terminal_themes/: Afterglow.terminal  Arthur.terminal  Galaxy.terminal  LiquidCarbon.terminal  Mariana.terminal  Neutron.terminal  SpaceGray Eighties.terminal  Wombat.terminal
dot-vim/: after  compiler  install_packages.vim  packages.vim
scripts/: 01_bootstrap.bash  Brewfile  Brewfile.lock.json  Makefile  apt-package-list.txt  bootstrap.bash  bootstrap.py  bootstrap_linux.bash  bootstrap_macos.bash  install.sh  neovim_install.bash  nvim_install.bash  setup_bootstrap.bash  stow_install.bash  treesitter_install.bash  uctags_install.bash
scripts/python_bootstrap/: pyproject.toml
scripts/python_bootstrap/python_bootstrap/: bootstrap.py  cmd_with_logs.py  defines.py  install_fzf.py  install_neovim.py  install_node.py  install_omz.py  install_py.py  install_stow.py  install_treesitter.py  install_uctags.py  linux_bootstrap.py  utilities.py
scripts/python_bootstrap/python_bootstrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/python_bootstrap/tests/: test_apt_packages.py
(+66 files in other folders)
